src/tests/fixtures/subscriptions/InputTypeWithAsyncIterable.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInput */
export type NotSubscription = {
  /** @gqlField */
  greetings: AsyncIterable<string>;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/subscriptions/InputTypeWithAsyncIterable.invalid.ts:4:14 - error: `AsyncIterable` is not a valid as an input type.

4   greetings: AsyncIterable<string>;
               ~~~~~~~~~~~~~~~~~~~~~
